--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <!-- Stylesheets-->
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Incluir tu archivo JavaScript -->
+    <script src="navbar.js"></script>
 </head>
 <body>
     <!-- barra de navegacion -->
     <nav>
-        <ul class="nav nav-tabs justify-content-end" id="nav">
+        <ul class="nav nav-tabs justify-content-end align-items-center" id="nav">
+            <p class="text-center" id="nav_texto">NodeUx</p>
             <!-- conceptos -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_conceptos">CONCEPTOS</a>
@@ -30,7 +33,7 @@
             </li>
             <!-- Ejemplos -->
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">EJEMPLOS</a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_ejemplos">EJEMPLOS</a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Patrones</a></li>
                     <li><hr class="dropdown-divider"></li>
@@ -43,7 +46,7 @@
             </li>
             <!-- Acerca de -->
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">ACERCA DE</a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_acerca">ACERCA DE</a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">¿Quiénes somos? </a></li>
                     <li><hr class="dropdown-divider"></li>
@@ -52,6 +55,9 @@
             </li>
         </ul>    
     </nav>
+    <div class="container justify-content-center" id="container_puntos">
+        <h1>hola</h1>
+    </div>
 
     <!-- Bootstrap scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
