--- a/index.html
+++ b/index.html
@@ -7,55 +7,12 @@
     <!-- Stylesheets-->
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Incluir tu archivo JavaScript -->
-    <script src="navbar.js"></script>
 </head>
 <body>
-    <!-- barra de navegacion -->
-    <nav>
-        <ul class="nav nav-tabs justify-content-end align-items-center" id="nav">
-            <p class="text-center" id="nav_texto">NodeUx</p>
-            <!-- conceptos -->
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_conceptos">CONCEPTOS</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Tipos de Diseño</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Diseño UI/UX</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Campo Laboral</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Patrones</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Dark Patterns</a></li>
+    <!-- Incluir el navbar -->
+    <div id="navbar_container" class="container-fluid"></div>
 
-              </ul>
-            </li>
-            <!-- Ejemplos -->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_ejemplos">EJEMPLOS</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Patrones</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Patrones Oscuros</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">User Interface</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">User Experience</a></li>
-                </ul>
-            </li>
-            <!-- Acerca de -->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_acerca">ACERCA DE</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">¿Quiénes somos? </a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">¿Qué buscamos?</a></li>
-                </ul>
-            </li>
-        </ul>    
-    </nav>
-    <!-- <img src="./img/Dark Patterns.png" class="img-fluid" alt="" id="dark_patterns"> -->
+    <!-- Contenido principal -->
     <div class="container d-flex justify-content-between align-items-center" style="min-height: 100vh;" id="container_puntos">
         <div class="row">
             <div class="col-md-6">
@@ -76,6 +33,7 @@
             </div>
         </div>
     </div>
+
     <!-- Bootstrap scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -84,6 +42,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <!-- Incluir el script del navbar -->
     <script src="./js/script.js"></script>
-    <script src="complementos/navbar.js"></script>
+    <!-- Script para cargar el navbar -->
+    <script>
+        // Cargar el navbar desde el archivo navbar.html
+        $(function(){
+            $('#navbar_container').load('complementos/navbar/navbar.html');
+        });
+    </script>
 </body>
 </html>
