--- a/pages/tipos_de_diseño.html
+++ b/pages/tipos_de_diseño.html
@@ -3,43 +3,26 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>NodeUx</title>
+        <title>Conceptos</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!-- styles.css -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/css/tipos_de_diseño.css">
         <link rel="stylesheet" href="/nav/nav.css">
+
     </head>
     <body>
         <!-- nav barra -->
-        <!-- nav barra -->
         <div id="nav"></div>
-
-        <!-- circulos -->
-        <div class="container d-flex justify-content-between align-items-center" style="min-height: 100vh;" id="container_principal">
-            <div class="row">
-                <div class="col-md-6">
-                    <!-- Primera parte -->
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="circulo" ></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <!-- Segunda parte -->
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="circulo"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <h1>hola mundo</h1>
 
         <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
         <!-- js -->
-        <script src="app.js" async defer></script>
+        <script src="/js/tipos_de_diseño.js" async defer></script>
         <!-- nav.js -->
         <script src="/nav/nav.js"></script>
     </body>
