Cambios de archivos

--- a/nav/nav.html
+++ b/nav/nav.html
@@ -5,13 +5,13 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_conceptos">CONCEPTOS</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="../pages/tipos_de_diseño.html">Tipos de Diseño</a></li>
+            <li><a class="dropdown-item" href="/pages/tiposDeDiseños.html">Tipos de Diseño</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Diseño UI/UX</a></li>
+            <li><a class="dropdown-item" href="/pages/ui.html">Diseño UI/UX</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Campo Laboral</a></li>
+            <li><a class="dropdown-item" href="">Campo Laboral</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Patrones</a></li>
+            <li><a class="dropdown-item" href="/pages/patrones.html">Patrones</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Dark Patterns</a></li>
 
