--- a/pages/patrones.html
+++ b/pages/patrones.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PATRONES</title>
-    <link rel="stylesheet" type="text/css" href="css/patrones.css">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- styles.css -->
+    <link rel="stylesheet" type="text/css" href="/css/patrones.css">
 </head>
-<body>
+  <body>
     <div id="container.a"> 
         <div id="container.b">
         <h2>PATRONES</h2>
@@ -15,17 +18,32 @@
               <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
               <h3>CARACTERÍSTICAS</h3>
               <p>Para que una solución sea considerada un patrón debe primero comprobar su utilidad, esto significa que debe estar confirmada su efectividad resolviendo problemas similares en otros contextos digitales. Por ende, cada patrón debe ser reutilizable para que pueda ser aplicado en diferentes circunstancias.</p>
-              
-              <img src="img/Diseño.jpg" width="200">
-              <img src="img/Dark Patterns.png" height="200">
-              <img src="img/Diseño.jpg">
+              <h3>EJEMPLOS</h3>
+
+              <div class="contenedor">
+              <div class="cuadro">
+                <img src="img/Diseño.jpg" alt="Imagen">
+                <h4>Ejemplo1</h3>
+                </div>
+              <div class="cuadro">
+                <img src="img/Diseño.jpg" alt="Imagen">
+                <h4>Ejemplo2</h3>
+                </div>
+              <div class="cuadro">
+                <img src="img/Diseño.jpg" alt="Imagen">
+                <h4>Ejemplo3</h3>
+              </div>
 
         <h2>EJEMPLOS</h2>
               <h3>VENTAJAS DE UTILIZAR PATRONES</h3>
               <p>Para que una solución sea considerada un patrón debe primero comprobar su utilidad, esto significa que debe estar confirmada su efectividad resolviendo problemas similares en otros contextos digitales.</p>
             </div>
-        </div>  
+        </div>
     </div>
-    </body>
+    <!-- js -->
+    <script src="/js/tipos_de_diseño.js" async defer></script>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+  </body>
 </html>
-
