--- a/pages/tiposDeDiseños.html
+++ b/pages/tiposDeDiseños.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Conceptos</title>
+        <title>Tipos de Diseños</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- bootstrap -->
@@ -17,12 +17,12 @@
         <!-- nav barra -->
         <div id="nav"></div>
         <h1>hola mundo</h1>
-
+        
+        <!-- js -->
+        <script src="/js/tipos_de_diseño.js" async defer></script>
         <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-        <!-- js -->
-        <script src="/js/tipos_de_diseño.js" async defer></script>
         <!-- nav.js -->
         <script src="/nav/nav.js"></script>
     </body>
