Implementacion de navbar a paginas

--- a/nav/nav.html
+++ b/nav/nav.html
@@ -13,7 +13,7 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/pages/patrones.html">Patrones</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Dark Patterns</a></li>
+            <li><a class="dropdown-item" href="/pages/darkPatterns.html">Dark Patterns</a></li>
 
           </ul>
         </li>
