--- a/index.html
+++ b/index.html
@@ -18,21 +18,30 @@
         <div id="nav"></div>
 
         <!-- circulos -->
-        <div class="container d-flex justify-content-between align-items-center" style="min-height: 100vh;" id="container_principal">
-            <div class="row">
-                <div class="col-md-6">
-                    <!-- Primera parte -->
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="circulo" ></div>
-                    </div>
+        <div class="container text-center" style="min-height: 100vh;" id="container_principal">
+            <div class="row" id="row_1">
+                <div class="col">
+                    <div class="circle" id="circle_1"></div>
+                    
                 </div>
-                <div class="col-md-6">
-                    <!-- Segunda parte -->
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="circulo"></div>
-                    </div>
+                <div class="col">
+                    <div class="circle" id="circle_2"></div>
+                </div>
+                <div class="col">
+                    <div class="circle" id="circle_3"></div>
                 </div>
             </div>
+            <div class="row" id="row_2">
+                <div class="col">
+                    <div class="circle" id="circle_4"></div>
+                </div>
+                <div class="col">
+                    <div class="circle" id="circle_5"></div>
+                </div>
+                <div class="col">
+                    <div class="circle" id="circle_6"></div>
+                </div>   
+            </div>    
         </div>
 
         <!-- bootstrap -->
