--- a/pages/patrones.html
+++ b/pages/patrones.html
@@ -8,55 +8,50 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
     <link rel="stylesheet" type="text/css" href="/css/patrones.css">
-<<<<<<< Updated upstream
     <!-- nav.css -->
     <link rel="stylesheet" href="/nav/nav.css">
-=======
-    
->>>>>>> Stashed changes
+
 </head>
   <body>
     <!-- nav barra -->
     <div id="nav"></div>
 
-    <div id="container.a"> 
+    <div class="container"> 
         <div class="container d-flex justify-content-between align-items-center" style="min-height: 100vh;" id="container_principal">
-            <div id="container.c">
+            <div class="container">
               <h2>PATRONES</h2>
-              <h3>¿QUÉ SON?</h3>
-              <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
-              <h3>CARACTERÍSTICAS</h3>
-              <p>Para que una solución sea considerada un patrón debe primero comprobar su utilidad, esto significa que debe estar confirmada su efectividad resolviendo problemas similares en otros contextos digitales. Por ende, cada patrón debe ser reutilizable para que pueda ser aplicado en diferentes circunstancias.</p>
-              <h3>EJEMPLOS</h3>
+              <div class="container text-center" id="container_texto">
+                <h3>¿QUÉ SON?</h3>
+                <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
+                <h3>CARACTERÍSTICAS</h3>
+                <p>Para que una solución sea considerada un patrón debe primero comprobar su utilidad, esto significa que debe estar confirmada su efectividad resolviendo problemas similares en otros contextos digitales. Por ende, cada patrón debe ser reutilizable para que pueda ser aplicado en diferentes circunstancias.</p>
+                <h3>EJEMPLOS</h3>
+              </div>
 
-              <div class="contenedor">
-              <div class="cuadro">
-                <img src="img/Diseño.jpg" alt="Imagen">
-                <h4>Ejemplo1</h3>
-                </div>
-              <div class="cuadro">
-                <img src="img/Diseño.jpg" alt="Imagen">
-                <h4>Ejemplo2</h3>
-                </div>
-              <div class="cuadro">
-                <img src="img/Diseño.jpg" alt="Imagen">
-                <h4>Ejemplo3</h3>
-                </div> 
-                <hr>   
-                  <div id="container.c">
-                    <h3>VENTAJAS DE UTILIZAR PATRONES</h3>
-                    <p>Para que una solución sea considerada un patrón debe primero comprobar su utilidad, esto significa que debe estar confirmada su efectividad resolviendo problemas similares en otros contextos digitales.</p>
+              <div class="container" id="container_imagenes">
+                <div class="row">
+                  <div class="cuadro">
+                    <img src="img/Diseño.jpg" alt="Imagen">
+                    <h4>Ejemplo1</h3>
                   </div>
+                  <div class="cuadro">
+                    <img src="img/Diseño.jpg" alt="Imagen">
+                    <h4>Ejemplo2</h3>
+                  </div>
+                  <div class="cuadro">
+                    <img src="img/Diseño.jpg" alt="Imagen">
+                    <h4>Ejemplo3</h3>
+                  </div> 
+                </div>
+                <hr>   
+                <div class="container">
+                  <h3>VENTAJAS DE UTILIZAR PATRONES</h3>
+                  <p>Para que una solución sea considerada un patrón debe primero comprobar su utilidad, esto significa que debe estar confirmada su efectividad resolviendo problemas similares en otros contextos digitales.</p>
+                </div>
               </div>
             </div>
         </div>
     </div>
-          <div id="container.c">
-            <h3>VENTAJAS DE UTILIZAR PATRONES</h3>
-            <p>Para que una solución sea considerada un patrón debe primero comprobar su utilidad, esto significa que debe estar confirmada su efectividad resolviendo problemas similares en otros contextos digitales.</p>
-          </div>
-      </div>
-  </div>
 
     <!-- js -->
     <script src="/js/tipos_de_diseño.js" async defer></script>
