--- a/pages/darkpatterns.html
+++ b/pages/darkpatterns.html
@@ -21,7 +21,7 @@
         <div class="container"> 
             <div class="container d-flex justify-content-between align-items-center" style="min-height: 100vh;" id="container_principal">
                 <div class="container">
-                  <h2>DISEÑO</h2>
+                  <h2>DARK PATTERNS</h2>
                   <div class="container text-center" id="container_texto">
                     <h3>DEFINICIÓN</h3>
                     <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
