--- a/pages/ux.html
+++ b/pages/ux.html
@@ -18,6 +18,43 @@
         <!-- nav barra -->
         <div id="nav"></div>
 
+        <div class="container"> 
+            <div class="container d-flex justify-content-between align-items-center" style="min-height: 100vh;" id="container_principal">
+                <div class="container">
+                  <h2>USER EXPERIENCE</h2>
+                  <div class="container text-center" id="container_texto">
+                    <h3>DEFINICIÓN</h3>
+                    <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
+                    <h3>CARACTERÍSTICAS</h3>
+                    <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
+                    <h3>EJEMPLOS/TIPOS</h3>
+                  </div>
+    
+                  <div class="container" id="container_imagenes">
+                    <div class="row">
+                      <div class="cuadro">
+                        <img src="img/Diseño.jpg" alt="Imagen">
+                        <h4>Ejemplo1</h3>
+                      </div>
+                      <div class="cuadro">
+                        <img src="img/Diseño.jpg" alt="Imagen">
+                        <h4>Ejemplo2</h3>
+                      </div>
+                      <div class="cuadro">
+                        <img src="img/Diseño.jpg" alt="Imagen">
+                        <h4>Ejemplo3</h3> 
+                      </div> 
+                    </div>
+                    <hr>   
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
         <!-- js -->
         <script src="" async defer></script>
         <!-- bootstrap -->
