--- a/PAGINA_1/index.html
+++ b/PAGINA_1/index.html
@@ -11,7 +11,7 @@
         <!-- styles.css -->
         <link rel="stylesheet" href="styles.css">
         <!-- nav.css -->
-        <link rel="stylesheet" href="/nav/nav.css">
+        <link rel="stylesheet" href="/PAGINA_1/nav/nav.css">
     </head>
     <body>
         <!-- nav barra -->
@@ -49,6 +49,6 @@
         <!-- js -->
         <script src="app.js" async defer></script>
         <!-- nav.js -->
-        <script src="/nav/nav.js"></script>
+        <script src="/PAGINA_1/nav/nav.js"></script>
     </body>
 </html>
