--- a/PAGINA_1/nav/nav.html
+++ b/PAGINA_1/nav/nav.html
@@ -1,19 +1,19 @@
 <nav>
     <ul class="nav nav-tabs justify-content-end align-items-center" id="nav">
-        <li><a class="dropdown-item" href="/index.html" id="navHome">NodeUx</a></li>
+        <li><a class="dropdown-item" href="/PAGINA_1/index.html" id="navHome">NodeUx</a></li>
         <!-- conceptos -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_conceptos">CONCEPTOS</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/pages/tiposDeDiseños.html">Tipos de Diseño</a></li>
+            <li><a class="dropdown-item" href="/PAGINA_1/pages/tiposDeDiseños.html">Tipos de Diseño</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/pages/ui.html">Diseño UI/UX</a></li>
+            <li><a class="dropdown-item" href="/PAGINA_1/pages/ui.html">Diseño UI/UX</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="">Campo Laboral</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/pages/patrones.html">Patrones</a></li>
+            <li><a class="dropdown-item" href="/PAGINA_1/pages/patrones.html">Patrones</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/pages/darkPatterns.html">Dark Patterns</a></li>
+            <li><a class="dropdown-item" href="/PAGINA_1/pages/darkPatterns.html">Dark Patterns</a></li>
 
           </ul>
         </li>
