--- a/PAGINA_1/pages/diseño.html
+++ b/PAGINA_1/pages/diseño.html
@@ -7,9 +7,9 @@
         <!-- bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!-- styles.css -->
-        <link rel="stylesheet" type="text/css" href="/css/diseño.css">
+        <link rel="stylesheet" type="text/css" href="/PAGINA_1/css/diseño.css">
         <!-- nav.css -->
-        <link rel="stylesheet" href="/nav/nav.css">
+        <link rel="stylesheet" href="/PAGINA_1/nav/nav.css">
     </head>
     <body>
         <!-- nav barra -->
@@ -58,6 +58,6 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
         <!-- nav.js -->
-        <script src="/nav/nav.js"></script>
+        <script src="/PAGINA_1/nav/nav.js"></script>
     </body>
 </html>
