--- a/PAGINA_1/nav/nav.html
+++ b/PAGINA_1/nav/nav.html
@@ -1,6 +1,6 @@
 <nav>
     <ul class="nav nav-tabs justify-content-end align-items-center" id="nav">
-        <li><a class="dropdown-item" href="/PAGINA_1/index.html" id="navHome">NodeUx</a></li>
+        <li><a class="dropdown-item" href="/PAGINA_1/index.html" id="nav_home">NodeUx</a></li>
         <!-- conceptos -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_conceptos">CONCEPTOS</a>
