--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -57,7 +57,19 @@
         <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
         </div>
 
-        
+        <h2 id=subtitulo>TIPOS DE DISEÑO</h2>
+
+
+       <!-- categorias -->
+
+       <div class="contenedor-imagenes">
+        <img src="img/figuraprueba.png" alt="Imagen 1">
+        <img src="img/figuraprueba.png" alt="Imagen 2">
+        <img src="img/figuraprueba.png" alt="Imagen 3">
+        <!-- Agrega más imágenes según sea necesario -->
+       </div>
+
+
 
 
 
