--- a/PAGINA_1/nav/nav.html
+++ b/PAGINA_1/nav/nav.html
@@ -1,36 +1,18 @@
 <nav>
     <ul class="nav nav-tabs justify-content-end align-items-center" id="nav">
-        <li><a class="dropdown-item" href="/PAGINA_1/index.html" id="nav_home">NodeUx</a></li>
+        <li><a class="dropdown-item" href="/PAGINA_1/index.html" id="nav_home"></a></li>
 
         <h1>NODEUX</h1>
 
-        <!-- conceptos -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_conceptos">CONCEPTOS</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/PAGINA_1/pages/tiposDeDiseños.html">Tipos de Diseño</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/PAGINA_1/pages/ui.html">Diseño UI/UX</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="">Campo Laboral</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/PAGINA_1/pages/patrones.html">Patrones</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/PAGINA_1/pages/darkPatterns.html">Dark Patterns</a></li>
 
-          </ul>
         </li>
         <!-- Ejemplos -->
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_ejemplos">EJEMPLOS</a>
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_ejemplos">USUARIO</a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Patrones</a></li>
+                <li><a class="dropdown-item" href="#">Investigación de usuario</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Patrones Oscuros</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">User Interface</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">User Experience</a></li>
+                <li><a class="dropdown-item" href="#">Patrones Oscuros / experiencias</a></li>
             </ul>
         </li>
         <!-- Acerca de -->
