--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -57,20 +57,41 @@
         <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
         </div>
 
-        <h2 id=subtitulo>TIPOS DE DISEÑO</h2>
-
+        <div class="container" id="containertexto">
+            <h2>TIPOS DE DISEÑO</h2>
+          </div>
 
        <!-- categorias -->
 
-       <div class="contenedor-imagenes">
-        <img src="img/figuraprueba.png" alt="Imagen 1">
-        <img src="img/figuraprueba.png" alt="Imagen 2">
-        <img src="img/figuraprueba.png" alt="Imagen 3">
+       <div class="contenedor-imagenes" id="textocentrado">
+        <img src="img/figuraprueba2.png" alt="Imagen 1">
+        <img src="img/figuraprueba2.png" alt="Imagen 2">
+        <img src="img/figuraprueba2.png" alt="Imagen 3">
         <!-- Agrega más imágenes según sea necesario -->
        </div>
 
+       <div class="container" id="containertexto">
+        <h2>DISEÑO UI/UX</h2>
+      </div>
 
+   <div class="contenedor-imagenes" id="textocentrado">
+    <img src="img/figuraprueba2.png" alt="Imagen 1">
+    <img src="img/figuraprueba2.png" alt="Imagen 2">
+    <!-- Agrega más imágenes según sea necesario -->
+   </div>
 
+          <div class="container" id="containertexto">
+        <h2>CAMPO LABORAL</h2>
+      </div>
+
+   <div class="contenedor-imagenes" id="textocentrado">
+    <img src="img/figuraprueba2.png" alt="Imagen 1">
+    <img src="img/figuraprueba2.png" alt="Imagen 2">
+    <img src="img/figuraprueba2.png" alt="Imagen 3">
+    <!-- Agrega más imágenes según sea necesario -->
+   </div>
+
+   
 
 
         <!-- bootstrap -->
