--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -90,10 +90,43 @@
     <img src="img/figuraprueba2.png" alt="Imagen 3">
     <!-- Agrega más imágenes según sea necesario -->
    </div>
+   <div class="contenedor-imagenes" id="textocentrado">
+    <img src="img/figuraprueba2.png" alt="Imagen 1">
+    <img src="img/figuraprueba2.png" alt="Imagen 2">
+    <img src="img/figuraprueba2.png" alt="Imagen 3">
+    <!-- Agrega más imágenes según sea necesario -->
+   </div>
+   <div class="contenedor-imagenes" id="textocentrado">
+    <img src="img/figuraprueba2.png" alt="Imagen 1">
+    <img src="img/figuraprueba2.png" alt="Imagen 2">
+    <img src="img/figuraprueba2.png" alt="Imagen 3">
+    <!-- Agrega más imágenes según sea necesario -->
+   </div>
+
+   <div class="franja"></div>
+   <!-- El resto del contenido de tu página va aquí -->
+
+        <!-- Diseño franja -->
+        <div class="contenedorfranja">
+
+            <div class="cuadroboton">
+                <h2>PATRONES</h2>
+              </div>
+              <div class="cuadroboton">
+                <h2>PATRONES OSCUROS</h2>
+              </div>
+            </div>
+
+        </div>
+
+        
+
+
+
+
+
 
    
-
-
         <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
