--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -58,51 +58,27 @@
         </div>
 
         <div class="container" id="containertexto">
-            <h2>TIPOS DE DISEÑO</h2>
+        <h2>TIPOS DE DISEÑO</h2>
+        </div>
+        <div class="container text-left" id="textointroductorio">
+          <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
           </div>
-
-       <!-- categorias -->
-
-       <div class="contenedor-imagenes" id="textocentrado">
-        <img src="img/figuraprueba2.png" alt="Imagen 1">
-        <img src="img/figuraprueba2.png" alt="Imagen 2">
-        <img src="img/figuraprueba2.png" alt="Imagen 3">
-        <!-- Agrega más imágenes según sea necesario -->
-       </div>
-
-       <div class="container" id="containertexto">
-        <h2>DISEÑO UI/UX</h2>
-      </div>
-
-   <div class="contenedor-imagenes" id="textocentrado">
-    <img src="img/figuraprueba2.png" alt="Imagen 1">
-    <img src="img/figuraprueba2.png" alt="Imagen 2">
-    <!-- Agrega más imágenes según sea necesario -->
-   </div>
+        
+        <div class="container" id="containertexto">
+        <h2>DISEÑO UX/UI</h2>
+        </div>
+        <div class="container text-left" id="textointroductorio">
+          <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
+          </div>     
 
           <div class="container" id="containertexto">
-        <h2>CAMPO LABORAL</h2>
-      </div>
+            <h2>CAMPO LABORAL</h2>
+            </div>
+            <div class="container text-left" id="textointroductorio">
+              <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
+              </div>          
 
-   <div class="contenedor-imagenes" id="textocentrado">
-    <img src="img/figuraprueba2.png" alt="Imagen 1">
-    <img src="img/figuraprueba2.png" alt="Imagen 2">
-    <img src="img/figuraprueba2.png" alt="Imagen 3">
-    <!-- Agrega más imágenes según sea necesario -->
-   </div>
-   <div class="contenedor-imagenes" id="textocentrado">
-    <img src="img/figuraprueba2.png" alt="Imagen 1">
-    <img src="img/figuraprueba2.png" alt="Imagen 2">
-    <img src="img/figuraprueba2.png" alt="Imagen 3">
-    <!-- Agrega más imágenes según sea necesario -->
-   </div>
-   <div class="contenedor-imagenes" id="textocentrado">
-    <img src="img/figuraprueba2.png" alt="Imagen 1">
-    <img src="img/figuraprueba2.png" alt="Imagen 2">
-    <img src="img/figuraprueba2.png" alt="Imagen 3">
-    <!-- Agrega más imágenes según sea necesario -->
-   </div>
-
+ 
    <div class="franja"></div>
    <!-- El resto del contenido de tu página va aquí -->
 
@@ -116,10 +92,13 @@
                 <h2>PATRONES OSCUROS</h2>
               </div>
             </div>
-
         </div>
 
-        
+        <div class="contenedorcenter">
+
+            <h2 id="subtitulo2">NUESTRO OBJETIVO</h2>
+
+        </div>
 
 
 
