--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -6,12 +6,16 @@
     <title>NodeUx</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
     <link rel="stylesheet" href="styles.css">
     <!-- nav.css -->
-    <link rel="stylesheet" href="/PAGINA_2/styles.css">
+    <link rel="stylesheet" href="/PAGINA_2/nav/nav.css">
 </head>
 <body>
         <!-- nav barra -->
@@ -19,25 +23,25 @@
 
         <!-- circulos -->
         <div class="container text-center" style="min-height: 100vh;" id="container_principal">
-            <div class="row" id="row_1">
-                <div class="col">
+            <div class="row" id="row_circulos_1">
+                <div class="col" id="col_circulos" >
                     <div class="circle" id="circle_1"></div>
                 </div>
-                <div class="col">
+                <div class="col" id="col_circulos">
                     <div class="circle" id="circle_2"></div>
                 </div>
-                <div class="col">
+                <div class="col" id="col_circulos">
                     <div class="circle" id="circle_3"></div>
                 </div>
             </div>
-            <div class="row" id="row_2">
-                <div class="col">
+            <div class="row" id="row_circulos_2">
+                <div class="col" id="col_circulos">
                     <div class="circle" id="circle_4"></div>
                 </div>
-                <div class="col">
+                <div class="col" id="col_circulos">
                     <div class="circle" id="circle_5"></div>
                 </div>
-                <div class="col">
+                <div class="col" id="col_circulos">
                     <div class="circle" id="circle_6"></div>
                 </div>   
             </div>    
@@ -45,73 +49,107 @@
         
         <hr>
 
-        <!-- Diseño franja -->
-        <div class="contenedorfranja">
-
-            <h2 id="subtitulo1">¿QUÉ ES EL DISEÑO?</h2>
-
+        <!-- franja 1 -->
+        <div class="container" id="franja_1">
+            <h2>¿QUÉ ES EL DISEÑO?</h2>
         </div>
 
-                <!-- textocentral -->
-        <div class="container text-center" id="textocentral">
-        <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
+        <!-- texto central -->
+        <div class="container" id="textocentral">
+            <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander 
+                para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas 
+                en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
         </div>
 
-        <div class="container" id="containertexto">
-        <h2>TIPOS DE DISEÑO</h2>
+        <!-- texto diseño -->
+        <div class="container" id="texto_diseño">
+            <div class="container" id="tipos">
+                <h2>TIPOS DE DISEÑO</h2>
+                <div class="row">
+                    <div class="col-6">
+                        <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut 
+                            labore et dolore nagna aliqua. Ut enin ad ninin venian, quis nostrun exercitationen ullan 
+                            corporis suscipit laboriosan.</p>
+                    </div>
+                    <div class="col-6"></div>
+                </div>
+            </div>
+            <div class="container" id="diseño">
+                <h2>DISEÑO UX/UI</h2>
+                <div class="row">
+                    <div class="col-6">
+                        <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut 
+                            labore et dolore nagna aliqua. Ut enin ad ninin venian, quis nostrun exercitationen ullan 
+                            corporis suscipit laboriosan.</p>
+                    </div>
+                    <div class="col-6"></div>
+                </div>
+            </div>
+            <div class="container" id="campo_laboral">
+                <h2>CAMPO LABORAL</h2>
+                <div class="row">
+                    <div class="col-6">
+                        <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut 
+                            labore et dolore nagna aliqua. Ut enin ad ninin venian, quis nostrun exercitationen ullan 
+                            corporis suscipit laboriosan.</p>
+                    </div>
+                    <div class="col-6"></div>
+                </div>
+            </div>
+            <div class="container" id="informacion_usuario">
+                <h2>INVESTIGACION DE USUARIO</h2>
+                <div class="row">
+                    <div class="col-6">
+                        <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut 
+                            labore et dolore nagna aliqua. Ut enin ad ninin venian, quis nostrun exercitationen ullan 
+                            corporis suscipit laboriosan.</p>
+                    </div>
+                    <div class="col-6"></div>
+                </div>
+            </div>
+        </div>         
+
+    <!-- franja 2 -->
+    <div class="container text-center" id="franja_2">
+        <div class="container" id="franja_2_contenido">
+            <h2>PATRONES</h2>
         </div>
-        <div class="container text-left" id="textointroductorio">
-          <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
-          </div>
+        <div class="container" id="franja_2_contenido">
+            <h2>PATRONES OSCUROS</h2>
+        </div>
+    </div>
+    <!-- Nuestro objetivo -->
+    <div class="container"  id="objetivo">
+        <h2>NUESTRO OBJETIVO</h2>
+        <div class="row" id="texto">
+            <div class="col">
+                <h4>01</h4>
+                <h3>Introducir</h3>
+                <p>Que el usuario conozca respecto a los patrones 
+                    buenos y malos del diseño.</p>
+            </div>
+            <div class="col">                
+                <h4>02</h4>
+                <h3>Informar</h3>
+                <p>Que el usuario esté informado sobre los patrones 
+                    oscuros presentes en el diseño.</p>
+            </div>
+            <div class="col">
+                <h4>03</h4>
+                <h3>Identificar</h3>
+                <p>Que el usuario sea capaz de reconocer los tipos 
+                    de patrones oscuros existentes en aplicaciones y sitios web.</p>
+            </div>
+        </div>
         
-        <div class="container" id="containertexto">
-        <h2>DISEÑO UX/UI</h2>
-        </div>
-        <div class="container text-left" id="textointroductorio">
-          <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
-          </div>     
-
-          <div class="container" id="containertexto">
-            <h2>CAMPO LABORAL</h2>
-            </div>
-            <div class="container text-left" id="textointroductorio">
-              <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
-              </div>          
-
- 
-   <div class="franja"></div>
-   <!-- El resto del contenido de tu página va aquí -->
-
-        <!-- Diseño franja -->
-        <div class="contenedorfranja">
-
-            <div class="cuadroboton">
-                <h2>PATRONES</h2>
-              </div>
-              <div class="cuadroboton">
-                <h2>PATRONES OSCUROS</h2>
-              </div>
-            </div>
-        </div>
-
-        <div class="contenedorcenter">
-
-            <h2 id="subtitulo2">NUESTRO OBJETIVO</h2>
-
-        </div>
-
-
-
-
-
-
-   
+    </div>
+   <h1>hola</h1>
         <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
         <!-- js -->
-        <script src="/PAGINA_1/app.js" async defer></script>
+        <script src="/PAGINA_2/app.js" async defer></script>
         <!-- nav.js -->
-        <script src="/PAGINA_1/nav/nav.js"></script>
+        <script src="/PAGINA_2/nav/nav.js"></script>
 </body>
 </html>
