--- a/PAGINA_2/patronesoscuros.html
+++ b/PAGINA_2/patronesoscuros.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="/PAGINA_2/css/patronesoscuros.css">
     <!-- nav.css -->
     <link rel="stylesheet" href="/PAGINA_2/nav/nav.css">
+    <!-- footer.css -->
+    <link rel="stylesheet" href="/PAGINA_2/footer/footer.css">
 </head>
 <body>
     <!-- nav barra -->
@@ -97,5 +99,7 @@
         <script src="/PAGINA_2/app.js" async defer></script>
         <!-- nav.js -->
         <script src="/PAGINA_2/nav/nav.js"></script>
+        <!-- footer.js -->
+        <script src="/PAGINA_2/footer/footer.js"></script>
 </body>
 </html>
