--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="styles.css">
     <!-- nav.css -->
     <link rel="stylesheet" href="/PAGINA_2/nav/nav.css">
+    <!-- footer.css -->
+    <link rel="stylesheet" href="/PAGINA_2/footer/footer.css">
 </head>
 <body>
         <!-- nav barra -->
@@ -143,13 +145,17 @@
         </div>
         
     </div>
-   <h1>hola</h1>
-        <!-- bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-        <!-- js -->
-        <script src="/PAGINA_2/app.js" async defer></script>
-        <!-- nav.js -->
-        <script src="/PAGINA_2/nav/nav.js"></script>
+    <!-- footer  -->
+    <div id="footer"></div>
+
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <!-- js -->
+    <script src="/PAGINA_2/app.js" async defer></script>
+    <!-- nav.js -->
+    <script src="/PAGINA_2/nav/nav.js"></script>
+    <!-- footer.js -->
+    <script src="/PAGINA_2/footer/footer.js"></script>
 </body>
 </html>
