--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -22,49 +22,47 @@
 <body>
         <!-- nav barra -->
         <div id="nav"></div>
-
         <!-- circulos -->
-        <div class="container text-center" style="min-height: 100vh;" id="container_principal">
+        <div class="container" id="container_principal">
             <div class="row" id="row_circulos_1">
-                <div class="col" id="col_circulos" >
+                <div class="col justify-content-center" id="col_circulos" >
                     <div class="circle" id="circle_1"></div>
                 </div>
-                <div class="col" id="col_circulos">
+                <div class="col justify-content-center" id="col_circulos">
                     <div class="circle" id="circle_2"></div>
                 </div>
-                <div class="col" id="col_circulos">
+                <div class="col justify-content-center" id="col_circulos">
                     <div class="circle" id="circle_3"></div>
                 </div>
             </div>
             <div class="row" id="row_circulos_2">
-                <div class="col" id="col_circulos">
+                <div class="col justify-content-center" id="col_circulos">
                     <div class="circle" id="circle_4"></div>
                 </div>
-                <div class="col" id="col_circulos">
+                <div class="col justify-content-center" id="col_circulos">
                     <div class="circle" id="circle_5"></div>
                 </div>
-                <div class="col" id="col_circulos">
+                <div class="col justify-content-center" id="col_circulos">
                     <div class="circle" id="circle_6"></div>
                 </div>   
             </div>    
         </div>
-        
-        <hr>
 
         <!-- franja 1 -->
-        <div class="container" id="franja_1">
+        <div class="container-fluid" id="franja_1">
             <h2>¿QUÉ ES EL DISEÑO?</h2>
         </div>
 
         <!-- texto central -->
-        <div class="container" id="textocentral">
+        <div class="container justify-content-center text-center" id="textocentral">
             <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander 
                 para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas 
-                en la actualidad. Su esencia recae en que un patrón es una solución a un problema recurrente de diseño.</p>
+                en la actualidad. Su esencia recae en que un patrón es una solución a un problema 
+                recurrente de diseño.</p>
         </div>
 
         <!-- texto diseño -->
-        <div class="container" id="texto_diseño">
+        <div class="container-fluid" id="texto_diseño">
             <div class="container" id="tipos">
                 <h2>TIPOS DE DISEÑO</h2>
                 <div class="row">
@@ -112,7 +110,7 @@
         </div>         
 
     <!-- franja 2 -->
-    <div class="container text-center" id="franja_2">
+    <div class="container-fluid" id="franja_2">
         <div class="container" id="franja_2_contenido">
             <h2>PATRONES</h2>
         </div>
@@ -122,8 +120,8 @@
     </div>
     <!-- Nuestro objetivo -->
     <div class="container"  id="objetivo">
-        <h2>NUESTRO OBJETIVO</h2>
-        <div class="row" id="texto">
+        <h2 class="justify-content-center">NUESTRO OBJETIVO</h2>
+        <div class="row " id="texto">
             <div class="col">
                 <h4>01</h4>
                 <h3>Introducir</h3>
@@ -147,7 +145,6 @@
     </div>
     <!-- footer  -->
     <div id="footer"></div>
-
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
