--- a/PAGINA_2/patronesoscuros.html
+++ b/PAGINA_2/patronesoscuros.html
@@ -24,7 +24,7 @@
     <div id="nav"></div>
 
     <!-- cuadro principal -->
-    <div class="container d-flex justify-content-between align-items-center" style="min-height: 100vh;" id="container_principal"> 
+    <div class="container justify-content-between" id="container_principal"> 
         <!-- descripcion -->
         <div class="container">
             <h2>PATRONES OSCUROS</h2>
@@ -91,7 +91,8 @@
             </div>  
         </div>    
     </div>
-
+    <!-- footer  -->
+    <div id="footer"></div>
         <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
