--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
@@ -20,6 +21,7 @@
     <link rel="stylesheet" href="/PAGINA_2/footer/footer.css">
 </head>
 <body>
+    <div class="container" id="imagendefondo">
         <!-- nav barra -->
         <div id="nav"></div>
         <!-- circulos -->
@@ -47,6 +49,7 @@
                 </div>   
             </div>    
         </div>
+    </div>
 
         <!-- franja 1 -->
         <div class="container-fluid" id="franja_1">
@@ -55,10 +58,20 @@
 
         <!-- texto central -->
         <div class="container justify-content-center text-center" id="textocentral">
-            <p>El concepto de patrones de diseño fue aplicado por el arquitecto Christopher Alexander 
-                para ser introducidos posteriormente al desarrollo de softwares junto a otras disciplinas 
-                en la actualidad. Su esencia recae en que un patrón es una solución a un problema 
-                recurrente de diseño.</p>
+            <p>El diseño se define como una disciplina la cual se encarga de comunicar a través de diferentes elementos visuales/interactivos 
+               que mantienen relación entre usuario y servicio. Los diseños se distribuyen en distintas áreas, 
+               donde se mantiene el mismo propósito que es el responder a una problemática ya sea compuesta para 
+               poder ser parte del avance de un proyecto, empresa, producto, o para solucionar algún aspecto que 
+               dentro de la sociedad cause algún enigma.</p>
+
+                <p>Dentro de ellos existen valores estéticos que predominan dentro del lenguaje comunicativo
+                   y que dentro de la confección se rigen por patrones realizados especialmente con la intención de crear un orden en donde,
+                   lo que se quiere expresar sea legible y comprensible. En este contexto, existen productos que son construidos por el hombre 
+                   en el que se consideran fundamentos contextuales, funcionales y socioculturales.</p>
+                    
+                    <p>En la sociedad, las personas interactuamos constantemente con elementos creados, y adaptados mediante a bases de diseño,
+                       desde objetos físicos a espacios fabricados por medio de la digitalización, entre otros. Cada elemento que dispone de un
+                       uso corresponde a un diseño.</p>
         </div>
 
         <!-- texto diseño -->
@@ -67,22 +80,29 @@
                 <h2>TIPOS DE DISEÑO</h2>
                 <div class="row">
                     <div class="col-6">
-                        <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut 
-                            labore et dolore nagna aliqua. Ut enin ad ninin venian, quis nostrun exercitationen ullan 
-                            corporis suscipit laboriosan.</p>
+                        <p>Los diferentes diseños expuestos y utilizados en la sociedad, 
+                            se desarrollan de acuerdo a problemáticas y observaciones que van surgiendo y que a través de procesos y cualidades distintivas, 
+                            es que estos son funcionales y capaces de desenvolverse en ambientes donde estos son adaptables de acuerdo al contexto por el cual fue solicitado.
+                             Dentro de los contextos a considerar, el diseño se desenvuelve en diferentes áreas o “tipos”.</p>
                     </div>
-                    <div class="col-6"></div>
+                    <div class="col-6">
+                        <img src="/PAGINA_2/img/BOTONTIPOSDEDISEÑO2.png" alt="Descripción de la imagen" id="BOTONventana">
+                    </div>
                 </div>
             </div>
             <div class="container" id="diseño">
                 <h2>DISEÑO UX/UI</h2>
                 <div class="row">
                     <div class="col-6">
-                        <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut 
-                            labore et dolore nagna aliqua. Ut enin ad ninin venian, quis nostrun exercitationen ullan 
-                            corporis suscipit laboriosan.</p>
+                        <p>Diseño de Experiencia de Usuario (UX) toma por definición como todo aquel diseño (digital o físico)
+                             encargado de poder comprender y mantener una buena relación entre el usuario y el servicio/Interfaz.
+                             Por medio de este se puede observar cómo se desenvuelve el usuario con las diferentes propuestas,
+                             siendo parte de un desarrollo el cual da paso a la mejora en cuanto a calidad de la interacción,
+                             centrándose más que nada en la sensación de la experiencia.</p>
                     </div>
-                    <div class="col-6"></div>
+                    <div class="col-6">
+                        <img src="/PAGINA_2/img/BOTONDISEÑOUXUI2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                    </div>
                 </div>
             </div>
             <div class="container" id="campo_laboral">
@@ -93,7 +113,9 @@
                             labore et dolore nagna aliqua. Ut enin ad ninin venian, quis nostrun exercitationen ullan 
                             corporis suscipit laboriosan.</p>
                     </div>
-                    <div class="col-6"></div>
+                    <div class="col-6">
+                        <img src="/PAGINA_2/img/BOTONCAMPOLABORAL2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                    </div>
                 </div>
             </div>
             <div class="container" id="informacion_usuario">
@@ -104,7 +126,9 @@
                             labore et dolore nagna aliqua. Ut enin ad ninin venian, quis nostrun exercitationen ullan 
                             corporis suscipit laboriosan.</p>
                     </div>
-                    <div class="col-6"></div>
+                    <div class="col-6">
+                        <img src="/PAGINA_2/img/BOTONINVESTIGACIÓNDEUSUARIO2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                    </div>
                 </div>
             </div>
         </div>         
@@ -143,6 +167,11 @@
         </div>
         
     </div>
+    <div class="container justify-content-center" id="containerfondo">
+    <img src="/PAGINA_2/img/fondo2.png" alt="Descripción de la imagen" id="fondofinal">
+    </div>
+
+
     <!-- footer  -->
     <div id="footer"></div>
     <!-- bootstrap -->
