--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -63,6 +63,8 @@
         </div>
     </div>
 
+    <div class="rectangulopestaña"></div>
+
         <!-- franja 1 -->
         <div class="container-fluid" id="franja_1">
             <h2>¿QUÉ ES EL DISEÑO?</h2>
